[gd_scene load_steps=7 format=3 uid="uid://bas5fpiqsugld"]

[ext_resource type="Texture2D" uid="uid://d0uwsfo8gemya" path="res://sounds/images/backgrounds/1.jpg" id="1_8t47k"]
[ext_resource type="FontFile" path="res://SuperBubble.tres" id="1_ttow0"]
[ext_resource type="Script" path="res://Addition.gd" id="1_w64up"]
[ext_resource type="Script" path="res://Numpad.gd" id="2_13v4j"]
[ext_resource type="Texture2D" uid="uid://rh63ic4uvws0" path="res://images/star_06.png" id="4_par08"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_284dl"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 9.8, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.1
scale_max = 0.2
color = Color(0.458824, 1, 1, 1)
hue_variation_min = -0.49
hue_variation_max = 1.0

[node name="Addition" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w64up")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.447059, 0.470588, 0.494118, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -60.0
offset_right = 40.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8t47k")

[node name="MainVB" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -20.0
offset_right = 21.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="DisplayHB" type="HBoxContainer" parent="MainVB"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="LHB" type="GridContainer" parent="MainVB/DisplayHB"]
layout_mode = 2
size_flags_horizontal = 4
columns = 3

[node name="PlusLB" type="Label" parent="MainVB/DisplayHB"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ttow0")
theme_override_font_sizes/font_size = 100
text = "+"

[node name="RHB" type="GridContainer" parent="MainVB/DisplayHB"]
layout_mode = 2
size_flags_horizontal = 4
columns = 3

[node name="EqualLB" type="Label" parent="MainVB/DisplayHB"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ttow0")
theme_override_font_sizes/font_size = 100
text = "="

[node name="EHB" type="GridContainer" parent="MainVB/DisplayHB"]
layout_mode = 2
size_flags_horizontal = 4
columns = 3

[node name="EquationHB" type="HBoxContainer" parent="MainVB"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GPUParticles2D" type="GPUParticles2D" parent="MainVB/EquationHB"]
emitting = false
amount = 15
process_material = SubResource("ParticleProcessMaterial_284dl")
texture = ExtResource("4_par08")
one_shot = true

[node name="Question" type="Label" parent="MainVB/EquationHB"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ttow0")
theme_override_font_sizes/font_size = 100
text = "1+1="

[node name="Answer" type="Label" parent="MainVB/EquationHB"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_ttow0")
theme_override_font_sizes/font_size = 100

[node name="SoundEffect" type="AudioStreamPlayer" parent="MainVB/EquationHB"]

[node name="Numpad" type="HBoxContainer" parent="MainVB"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 36
script = ExtResource("2_13v4j")

[node name="0" type="Button" parent="MainVB/Numpad"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_ttow0")
theme_override_font_sizes/font_size = 100
text = "0"

[node name="1" type="Button" parent="MainVB/Numpad"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_ttow0")
theme_override_font_sizes/font_size = 100
text = "1"

[node name="2" type="Button" parent="MainVB/Numpad"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_ttow0")
theme_override_font_sizes/font_size = 100
text = "2"

[node name="3" type="Button" parent="MainVB/Numpad"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_ttow0")
theme_override_font_sizes/font_size = 100
text = "3"

[node name="4" type="Button" parent="MainVB/Numpad"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_ttow0")
theme_override_font_sizes/font_size = 100
text = "4"

[node name="5" type="Button" parent="MainVB/Numpad"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_ttow0")
theme_override_font_sizes/font_size = 100
text = "5"

[node name="6" type="Button" parent="MainVB/Numpad"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_ttow0")
theme_override_font_sizes/font_size = 100
text = "6"

[node name="7" type="Button" parent="MainVB/Numpad"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_ttow0")
theme_override_font_sizes/font_size = 100
text = "7"

[node name="8" type="Button" parent="MainVB/Numpad"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_ttow0")
theme_override_font_sizes/font_size = 100
text = "8"

[node name="9" type="Button" parent="MainVB/Numpad"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_ttow0")
theme_override_font_sizes/font_size = 100
text = "9"

[node name="NextBTN" type="Button" parent="MainVB"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.792157, 0, 1)
theme_override_fonts/font = ExtResource("1_ttow0")
theme_override_font_sizes/font_size = 100
text = "NEXT"
flat = true

[connection signal="numpad_pressed" from="MainVB/Numpad" to="." method="_on_numpad_numpad_pressed"]
[connection signal="button_down" from="MainVB/NextBTN" to="." method="_on_next_button_down"]
